--- a/public/stylesheets/adminControls.css
+++ b/public/stylesheets/adminControls.css
@@ -11,6 +11,36 @@ body{
         /background-position: 0vw 13vh;
 }
 
+#navigation {
+        /border:2px solid black;
+        text-align: center;
+        padding: 10px;
+}
+
+#navigation .navBtn{
+        width: auto;
+        background-color: red;
+        display: inline;
+        color:white;
+        margin:10px;
+}
+
+.containers{
+        margin:10px;
+        transform:scale(0);
+        animation: containerShow 1s forwards;
+}
+
+@keyframes containerShow {
+    from {transform:scale(0)}
+    to {transform:scale(1)}
+}
+
+#deanContainer #deanDataContainer{
+        display: block;
+        border:3px solid black;
+}
+
 #deanContainer .dean{
         display: inline-block;
         width:15%;
@@ -20,6 +50,10 @@ body{
         margin: 20px;
         text-align: center;
         font-family: arial;
+}
+
+h1{
+        text-align: center;
 }
 
 .title {
@@ -46,4 +80,49 @@ a {
 
 button:hover, a:hover {
         opacity: 0.7;
+}
+
+
+#collegeDetailsContainer{
+                display:none;
+                text-align: center;
+}
+
+#collegeDetailsContainer #collegeEnterForm{
+        border:3px solid black;
+        min-width: 25vw;
+        text-align: center;
+        background-color: white;
+        border-radius: 10px;
+        font-size: 100%;
+        display: inline-block;
+        padding:10px;
+}
+
+#collegeDetailsContainer #collegeEnterForm .inputField{
+        display: block;
+        min-width:100%;
+        font-size: 140%;
+        border-radius:4px;
+        border: 1px solid #e5e5e5;
+        margin-bottom: 15px;
+        padding-top:5px;
+        padding-bottom:5px;
+}
+
+#collegeDetailsContainer #collegeEnterForm .labelField{
+        text-align: left;
+        margin-bottom: 5px;
+        color:black;
+}
+
+#collegeDetailsContainer #collegeEnterForm input[type="submit"]{
+        cursor: pointer;
+        width: 90%;
+        /background-color: red;
+        border: none;
+        font-size: 130%;
+        /color:white;
+        margin-bottom: 15px;
+        padding: 5px;
 }
