--- a/views/logInAdmin.ejs
+++ b/views/logInAdmin.ejs
@@ -4,11 +4,19 @@
 <head>
         <title>Admin Controls</title>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+        <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC3ii7KbgyAQWq3c9K2jiE_VhSM_iRBSUM&libraries=places&callback=initMap" defer></script>
         <script src="/scripts/scriptAdminControls.js"></script>
 </head>
 <body>
-        <h1>Deans for confirmation are :-</h1>
-        <div id="deanContainer">
+        <div id="navigation">
+                <button class= "navBtn" id="showDeans">Show Deans</button>
+                <button class= "navBtn" id="enterBranchDetails">Enter Branch Details</button>
+                <button class= "navBtn" id="enterCollegeDetails">Enter College Details</button>
+                <button class= "navBtn" id="AssignExternalExaminers">Assign External Examiners</button>
+          </div>
+        <div id="deanContainer" class="containers">
+                <h1>Select/Reject the Deans from here</h1>
+                <div id="deanDataContainer">
                 <% for(var i=0;i<data.length;i++){ %>
                         <div id="dean<%=data[i]._id %>" class="dean"><!--adding dean's _id  to it's container to uniquely identify-->
                                 <h1><%=data[i].name%></h1>
@@ -22,7 +30,21 @@
                                 <p><button class="buttonConfirm" id="buttonConfirm<%=data[i]._id %>" onclick="confirmDean(this)">Recommend</button></p>
                                 <p><button class="buttonRemove" id="buttonRemove<%=data[i]._id %>" onclick="removeDean(this)">Remove</button></p>
                         </div>
+                </div>
                 <%}%>
+        </div>
+
+        <div id="collegeDetailsContainer" class="containers">
+                <h1>Enter the college here to Affliate to UTU</h1>
+                        <form id="collegeEnterForm" method="POST">
+                                <label for="collegeName" class="labelField">Enter College's Name</label>
+                                <input type="text" name="name" id="collegeName" class="inputField" placeholder="College Name"></input>
+                                <label for="collegeLocation">Search the college by it's name for location</label>
+                                <input type="text" name="location" id="collegeLocation" class="inputField" placeholder></input>
+                                <input type="hidden" name="lat" id="lat" placeholder="lat"></input>
+                                <input type="hidden" name="lng" id="lng" placeholder="lng"></input>
+                                <input type="submit" id="collegeDetailsADD" value="ADD"></input>
+                        </form>
         </div>
 </body>
 </html>
