--- a/views/logInFaculty.ejs
+++ b/views/logInFaculty.ejs
@@ -1,9 +1,16 @@
 <!Doctype html>
 <html>
 <head>
-<title>Faculty</title>
+        <link href="stylesheets/facultyControls.css" rel="stylesheet"></link>
+
+        <title>Faculty</title>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+        <script src="/scripts/scriptFacultyControls.js"></script>
 </head>
 <body>
+        <div id="navigation">
+                <button class= "navBtn" id="logout">Logout</button>
+          </div>
                 <h1>Yes, I am a faculty</h1>
 </body>
 </html>
