--- a/views/partials/logIn.ejs
+++ b/views/partials/logIn.ejs
@@ -12,6 +12,7 @@
                                 <option value="1">Faculty</option>
                                 <option value="2">HOD</option>
                                 <option value="3">Dean</option>
+                                <option value="4">Admin</option>
                         </select>
                 </div>
                 <input type="submit" value="Login"></input>
