--- a/views/partials/signUp.ejs
+++ b/views/partials/signUp.ejs
@@ -49,10 +49,10 @@
                                                 <option value="6">Electrical</option>
                                         </select>
                                         <label for="dateJoinHod" class="labelField step3Field dateJoinHod">Date of joining as HOD</label>
-                                        <input type="date" class="inputField step3Field dateJoinHod" name="dateJoinHod" id="signUpFielddateJoinHod" placeholder="Date of join" ></input>
+                                        <input type="date" class="inputField step3Field dateJoinHod" name="dateJoinHod" id="signUpFielddateJoinHod" placeholder="YYYY-MM-DD" ></input>
 
                                         <label for="dateJoinDean" class="labelField step3Field dateJoinDean">Date of joining as Dean</label>
-                                        <input type="date" class="inputField step3Field dateJoinDean" name="dateJoinDean" id="signUpFielddateJoinDean" placeholder="Date of join" ></input>
+                                        <input type="date" class="inputField step3Field dateJoinDean" name="dateJoinDean" id="signUpFielddateJoinDean" placeholder="YYYY-MM-DD" ></input>
 
                                 </div>
                                 <div id="step4">
