--- a/public/stylesheets/facultyControls.css
+++ b/public/stylesheets/facultyControls.css
@@ -3,7 +3,7 @@
 }
 
 body{
-        margin: 0px;
+        /margin: 0px;
         font-family: sans-serif;
         /background-image: url("/img/nn2.jpg");
         /background-size: 100% 87vh;
@@ -25,20 +25,8 @@ body{
         margin:10px;
 }
 
-#facultyContainer .faculty{
-        display: inline-block;
-        width:15%;
-        font-size: 70%;
-        box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-        max-width: 300px;
-        margin: 20px;
+h1{
         text-align: center;
-        font-family: arial;
-}
-
-.title {
-        color: grey;
-        font-size: 18px;
 }
 
 button {
@@ -50,14 +38,4 @@ button {
         cursor: pointer;
         width: 100%;
         font-size: 18px;
-}
-
-a {
-        text-decoration: none;
-        font-size: 22px;
-        color: black;
-}
-
-button:hover, a:hover {
-        opacity: 0.7;
 }
