--- a/views/logInDean.ejs
+++ b/views/logInDean.ejs
@@ -1,14 +1,20 @@
 <!Doctype html>
 <html>
-<link href="stylesheets/deanControls.css" rel="stylesheet"></link>
 <head>
+        <link href="stylesheets/deanControls.css" rel="stylesheet"></link>
         <title>Dean Controls</title>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
         <script src="/scripts/scriptDeanControls.js"></script>
 </head>
 <body>
-        <div id="facultyContainer">
+        <div id="navigation">
+                <button class= "navBtn" id="showHods">Show HODs</button>
+                <button class= "navBtn" id="showFaculties">Show Faculties</button>
+                <button class= "navBtn" id="logout">Logout</button>
+          </div>
+        <div id="facultyContainer" class="containers">
                 <h1>Faculties for confirmation are :-</h1>
+                <div id="facultyDataContainer">
                 <% for(var i=0;i<data.faculty.length;i++){ %>
                         <div id="faculty<%=data.faculty[i]._id %>" class="faculty"><!--adding faculty's _id  to it's container to uniquely identify-->
                                 <h1><%=data.faculty[i].name%></h1>
@@ -23,10 +29,12 @@
                                 <p><button class="buttonRemove" id="buttonRemove<%=data.faculty[i]._id %>" onclick="removeFaculty(this)">Remove</button></p>
                         </div>
                 <%}%>
+                </div>
         </div>
 
-        <div id="hodContainer">
+        <div id="hodContainer" class="containers">
                 <h1>HODs for confirmation are :-</h1>
+                <div id="hodDataContainer">
                 <% for(var i=0;i<data.hod.length;i++){ %>
                         <div id="hod<%=data.hod[i]._id %>" class="hod"><!--adding hod's _id  to it's container to uniquely identify-->
                                 <h1><%=data.hod[i].name%></h1>
@@ -41,6 +49,7 @@
                                 <p><button class="buttonRemove" id="buttonRemove<%=data.hod[i]._id %>" onclick="removeHod(this)">Remove</button></p>
                         </div>
                 <%}%>
+        </div>
         </div>
 
 </body>
