--- a/views/logInHod.ejs
+++ b/views/logInHod.ejs
@@ -7,8 +7,11 @@
         <script src="/scripts/scriptHodControls.js"></script>
 </head>
 <body>
-        <h1>Faculties for confirmation are :-</h1>
+        <div id="navigation">
+                <button class= "navBtn" id="logout">Logout</button>
+          </div>
         <div id="facultyContainer">
+                <h1>Faculties for confirmation are </h1>
                 <% for(var i=0;i<data.length;i++){ %>
                         <div id="faculty<%=data[i]._id %>" class="faculty"><!--adding faculty's _id  to it's container to uniquely identify-->
                                 <h1><%=data[i].name%></h1>
