--- a/views/logInAdmin.ejs
+++ b/views/logInAdmin.ejs
@@ -1,7 +1,7 @@
 <!Doctype html>
 <html>
-<link href="stylesheets/adminControls.css" rel="stylesheet"></link>
 <head>
+        <link href="stylesheets/adminControls.css" rel="stylesheet"></link>
         <title>Admin Controls</title>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
         <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC3ii7KbgyAQWq3c9K2jiE_VhSM_iRBSUM&libraries=places&callback=initMap" defer></script>
@@ -23,7 +23,6 @@
                                 <h1><%=data[i].name%></h1>
                                 <p><%=data[i].offEmail%></p>
                                 <p><%=data[i].mobile%></p>
-                                <p><%=data[i].branch%></p>
                                 <p><%=data[i].expYears%> Year(s) <%=data[i].expMonths%> month(s) Experience</p>
                                 <p class="title"><%=data[i].CollegeName%></p>
 
@@ -51,11 +50,15 @@
                         <form id="collegeEnterForm" method="POST">
                                 <label for="collegeName" class="labelField">Enter College's Name</label>
                                 <input type="text" name="name" id="collegeName" class="inputField" placeholder="College Name"></input>
-                                <label for="collegeLocation">Search the college by it's name for location</label>
-                                <input type="text" name="location" id="collegeLocation" class="inputField" placeholder></input>                                
+
+                                <label for="collegeCode" class="labelField">Enter College's Code</label>
+                                <input type="text" name="code" id="collegeCode" class="inputField" placeholder="College Code"></input>
+
+                                <label for="collegeLocation" class="labelField">Search the college by it's name for location</label>
+                                <input type="text" name="location" id="collegeLocation" class="inputField" placeholder></input>
                                 <input type="hidden" name="lat" id="lat" placeholder="lat"></input>
                                 <input type="hidden" name="lng" id="lng" placeholder="lng"></input>
-                                
+
                                 <input type="submit" id="collegeDetailsADD" value="ADD"></input>
                         </form>
         </div>
