--- a/views/partials/signUp.ejs
+++ b/views/partials/signUp.ejs
@@ -31,7 +31,7 @@
                                         </select>
 
                                         <label for="collegeCode" class="labelField">Select the college code</label>
-                                        <input class="inputField" name="CollegeCode" id="signUpFieldCollegeCode" ></input>
+                                        <input class="inputField" name="CollegeCode" id="signUpFieldCollegeCode" value="1"></input>
 
                                         <label for="offEmail" class="labelField">Enter your official email</label>
                                         <input type="email" class="inputField" name="offEmail" id="signUpFieldOffEmail" placeholder="Officail Email" ></input>
