--- a/public/stylesheets/facultyControls.css
+++ b/public/stylesheets/facultyControls.css
@@ -85,6 +85,12 @@ h1{
         border:none;
 }
 
+#dutiesInfo{
+        text-align: center;
+        border:3px solid black;
+        margin:10px;
+}
+
 #dutiesContainer #dutiesContainerNav{
         text-align: center;
         margin-bottom: 10px;
