--- a/views/logInAdmin.ejs
+++ b/views/logInAdmin.ejs
@@ -46,7 +46,7 @@
         </div>
 
         <div id="collegeDetailsContainer" class="containers">
-                <h1>Enter the college here to Affliate to UTU</h1>
+                <h1>Enter the college Affliated to UTU</h1>
                         <form id="collegeEnterForm" method="POST">
                                 <label for="collegeName" class="labelField">Enter College's Name</label>
                                 <input type="text" name="name" id="collegeName" class="inputField" placeholder="College Name"></input>
